`Hey Professor API`

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-APP_NAME=Laravel
+APP_NAME="Hey professor api"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:yFZJiDuFdZ1yKPj5dKRDkdPUhV9N60feh06bPwGlgJk=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=America/Sao_Paulo
 APP_URL=http://localhost
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=pt
+APP_FALLBACK_LOCALE=pt
+APP_FAKER_LOCALE=pt_BR
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -28,7 +28,7 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
